--- a/styles.css
+++ b/styles.css
@@ -327,10 +327,18 @@ body {
 }
 
 .rating {
+  border: none;
   display: flex;
   flex-direction: row-reverse;
   justify-content: center;
   gap: 4px;
+}
+
+fieldset {
+  border: none;
+  padding: 0;
+  margin: 0;
+  min-inline-size: 0; /* prevents weird shrinking in some browsers */
 }
 
 /* Estrelas */
