--- a/styles.css
+++ b/styles.css
@@ -274,7 +274,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  border:1px;
+  border:1px solid #863BFF;
 }
 
 /* Roxo base */
@@ -288,6 +288,7 @@ body {
 .timeline-new__marker--completed {
   color: #863BFF;
   background:white;
+  border:1px solid #863BFF;
 }
 
 .timeline-new__marker-icon {
@@ -297,14 +298,14 @@ body {
 
 /* In progress */
 .timeline-new__marker--in-progress {
-  border: 1px solid #ede9fe;
+  border:1px solid #863BFF;
   box-shadow: 0 0 0 3px rgba(124, 58, 237, 0.22);
 }
 
 /* Pending (vazio) */
 .timeline-new__marker--pending {
   background: #ffffff;
-  border: 2px solid #c4b5fd;
+  border:1px solid #863BFF;
   box-shadow: none;
 }
 
