--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,9 @@ body {
   margin: 0;
   font-size: 1.1rem;
   font-weight: 600;
+  position:absolute;
+  width:100%;
+  text-align:center;
 }
 
 .app-header__right {
