--- a/styles.css
+++ b/styles.css
@@ -442,7 +442,7 @@ body {
   justify-content: center;
   align-items: center;
   padding: 16px;
-
+  z-index:10;
   opacity: 0;
   pointer-events: none;
   transition: opacity 0.35s ease;
