--- a/styles.css
+++ b/styles.css
@@ -659,12 +659,14 @@ fieldset {
 
 
 .modal-selector {
-  position: fixed;
+  position: relative;
   bottom: 32px;
+  margin-top:24px;
   margin-left: 50%;
   transform: translateX(-50%);
   display: grid;
   grid-template-columns: repeat(1, 1fr);
+  grid-gap:16px;
   width: min(360px, 92vw);
   z-index: 5;
 }
